--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   <div id="audioContainer">
     <audio loop controls style="display: flex; justify-content: center; align-items: center;">
-      <source src="/assets/memory%20storage%20by%20ghost%20orchard.mp3" 
+      <source src="https://github.com/lil-bean/in-another-life/raw/gh-pages/assets/memory%20storage%20by%20ghost%20orchard.mp3" 
               type="audio/mpeg">
         your browser does not support the audio element.
     </audio>
