--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
 </head>
 
 <body>
-    
-
+<script type="text/javascript">
+var sc_project=12929336; 
+var sc_invisible=1; 
+var sc_security="508cec8f"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="hit counter"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12929336/0/508cec8f/1/" alt="hit counter"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
     
 </body>
 </html>
